v.0.0.3 Changes in Source code and Gambas project

--- a/connection/.hidden/CHANGELOG
+++ b/connection/.hidden/CHANGELOG
@@ -1,11 +1,12 @@
-* Wed Apr 01 2015 Carles Mateo <carles.mateo@gmail.com> 0.0.2
+2015-04-02 Carles Mateo v.0.0.3
+- Connection shows last time wrong connection
+- Connection shows the local ip address
+- Screen is a bit bigger
 
-* Wed Apr 01 2015 Carles Mateo <carles.mateo@gmail.com> 0.0.2
+2015-04-02 Carles Mateo
+Connection shows last time wrong connection
+Connection shows the local ip address
 
-* Wed Apr 01 2015 Carles Mateo <carles.mateo@gmail.com> 0.0.2
-
-* Wed Apr 01 2015 Carles Mateo <carles.mateo@gmail.com> 0.0.2
-
-* Wed Apr 01 2015 Carles Mateo <carles.mateo@gmail.com> 0.0.2
+2015-04-01 Carles Mateo v. 0.0.2
 - Initial release
 
